# ddpsc_phenotypercv

./: .gitignore  CMakeLists.txt  README.md  color_calibration.cpp  color_calibration.h  feature_extraction.cpp  feature_extraction.h  machine_learning.cpp  machine_learning.h  miscellaneous.cpp  miscellaneous.h  mkdocs.yml  morphology.cpp  morphology.h  phenotypercv.cpp  spatial_calibration.cpp
include/: .#machine_learning.h  color_calibration.h  feature_extraction.h  machine_learning.h  miscellaneous.h  morphology.h  phenotypercv.h  spatial_calibration.h
misc/: phenotypercv.submit  pull_compile_phenocv.sh  run_phenocv.sh
src/: color_calibration.cpp  feature_extraction.cpp  machine_learning.cpp  miscellaneous.cpp  morphology.cpp  phenotypercv.cpp  spatial_calibration.cpp
